--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
     },
     "require": {
         "saloonphp/saloon": "^3.0"
+    },
+    "require-dev": {
+        "laravel/pint": "^1.18"
     }
 }
