--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "globalmoderators/aia-connector",
     "description": "SDK to communicatie with the AIA-service",
     "type": "library",
+    "version": "0.0.1",
     "autoload": {
         "psr-4": {
             "GlobalModerators\\AiaConnector\\": "src/"
@@ -11,6 +12,33 @@
         "saloonphp/saloon": "^3.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.18"
+        "laravel/pint": "^1.18",
+        "phpunit/phpunit": "^11.3",
+        "orchestra/testbench": "^9.5"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
+        }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "@clear",
+            "@prepare"
+        ],
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": "@php vendor/bin/testbench workbench:build --ansi",
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@build",
+            "@php vendor/bin/testbench serve --ansi"
+        ],
+        "lint": [
+            "@php vendor/bin/pint --ansi",
+            "@php vendor/bin/phpstan analyse --verbose --ansi"
+        ]
     }
 }
