--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     },
     "require": {
-        "saloonphp/saloon": "^3.0"
+        "saloonphp/saloon": "^3.0",
+        "saloonphp/laravel-http-sender": "^3.0"
     },
     "require-dev": {
         "laravel/pint": "^1.18",
