--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require": {
         "saloonphp/saloon": "^3.0",
-        "saloonphp/laravel-http-sender": "^3.0"
+        "saloonphp/laravel-http-sender": "^3.0",
+        "saloonphp/pagination-plugin": "^2.0"
     },
     "require-dev": {
         "laravel/pint": "^1.18",
